added test background

--- a/CustomCables/CustomCables.csproj
+++ b/CustomCables/CustomCables.csproj
@@ -171,12 +171,16 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\header-bg-blurred.1tBuK.jpg" />
+    <Content Include="Content\images\header-bg.0M4Ei.jpg" />
+    <Content Include="Content\images\headphones\Sennheiser-HD-800-.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\fortkickassproject.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
