--- a/CustomCables/CustomCables.csproj
+++ b/CustomCables/CustomCables.csproj
@@ -174,10 +174,11 @@
     <Content Include="Content\images\background.png" />
     <Content Include="Content\images\header-bg-blurred.1tBuK.jpg" />
     <Content Include="Content\images\header-bg.0M4Ei.jpg" />
-    <Content Include="Content\images\headphones\350x700px-LL-a51efc95_img_30753-sized.jpg" />
-    <Content Include="Content\images\headphones\alpha-dog-sized.jpg" />
-    <Content Include="Content\images\headphones\HiFiMAN-HE-400i_P_1200-sized.jpg" />
-    <Content Include="Content\images\headphones\Open3-Sennheiser-HD650-sized.jpg" />
+    <Content Include="Content\images\headphones\350x700px-LL-a51efc95_img_30753-sized.png" />
+    <Content Include="Content\images\headphones\alpha-dog-sized.png" />
+    <Content Include="Content\images\headphones\HiFiMAN-HE-400i_P_1200-sized.png" />
+    <Content Include="Content\images\headphones\Open3-Sennheiser-HD650-sized.png" />
+    <Content Include="Content\images\headphones\Open3-Sennheiser-HD650.png" />
     <Content Include="Content\images\headphones\Sennheiser-HD-800-sized.png" />
     <Content Include="Content\images\icon-portrait.2xO5g.png" />
     <Content Include="favicon.ico" />
@@ -224,6 +225,7 @@
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Home\_HeadphoneSelect.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
